# min

./: .rustfmt.toml  CODE_OF_CONDUCT.md  Cargo.toml  README.md
examples/: echo.rs
min-cli/: Cargo.toml
min-cli/blah/: Cargo.toml
min-cli/files/: main.rs
min-cli/src/: db.rs  files.rs  main.rs
min-lib/: Cargo.toml
min-lib/src/: lib.rs
min-lib/src/db/: mod.rs
src/: lib.rs
