[package]
name = "min-cli"
version = "0.1.0"
authors = ["Michael Gattozzi <mgattozzi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "min"
path = "src/main.rs"

[dependencies]
structopt = "0.3"
min-lib = { path = "../min-lib" }
tracing = "0.1"
tracing-subscriber = "0.2"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
which = "3.1"

[features]
testing = []
