[package]
name = "min-lib"
version = "0.1.0"
authors = ["Michael Gattozzi <mgattozzi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "min"
path = "src/lib.rs"

[dependencies]
hyper = "0.13"
futures = "0.3"
tokio = { version="0.2", features=["full"] }
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.2"
diesel = { version = "1.4", features = ["postgres", "sqlite", "mysql"] }
