[package]
name = "blah"
edition = "2018"
authors = ["Michael Gattozzi <mgattozzi@gmail.com>"]
version = "0.1.0"

[dependencies]
tracing-subscriber = "0.2"
serde_json = "1.0"
tracing = "0.1"
min-lib = "0.1"
tracing-futures = "0.2"

[dependencies.diesel]
features = ["postgres", "sqlite", "mysql"]
version = "1.4"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dependencies.tokio]
features = ["full"]
version = "0.2"
